--- a/assets/style.css
+++ b/assets/style.css
@@ -83,6 +83,13 @@ nav a:hover::before {
     width: 100%
 } 
 
+.hero h1 {
+    text-align: center;
+    padding-bottom: 100px;
+    color: rgba(43, 113, 187, 0.6);
+    text-shadow: 2px 2px 2px rgba(231,132,132, 0.4);
+}
+
 .hero {
     color: var(--secondary-color);
     font-size: larger;
@@ -96,11 +103,11 @@ nav a:hover::before {
 }
 
 .hero p {
-    color: rgba(71, 107, 226, .8);
+    color: rgba(71, 107, 226, .6);
     padding-top: 20px;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-left: 100px;
+    margin-left: 60px;
 
 }
 
@@ -110,9 +117,13 @@ nav a:hover::before {
 }
 
 .second-para {
-    margin-top: 200px;
+    margin-top: 100px;
     margin-right: 100px;
     text-align: right;
+}
+
+.box {
+
 }
 
 
