--- a/assets/style.css
+++ b/assets/style.css
@@ -88,7 +88,7 @@ nav a:hover::before {
 .hero h1 {
     text-align: center;
     padding-bottom: 100px;
-    color: rgba(43, 113, 187, 0.6);
+    color: rgba(43, 113, 187, 0.5);
     text-shadow: 2px 2px 2px rgba(231,132,132, 0.4);
 }
 
@@ -125,32 +125,90 @@ nav a:hover::before {
 }
 
 .about-me {
-    background:var(--primary-color);
+    background-color:var(--primary-color);
     color: var(--secondary-color);
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 50%;
-    
-
+    width: 100%;
+    height: 500px;
 }
 
 .about-me h2 {
     padding-top: 20px;
     margin-left: 60px;
+    padding-right: 50%;
     color: rgba(255, 254, 189, .8);
     font-weight: 100;
 
 }
 
 .headshot {
-    margin-left: 60px;
-    padding: 20px 0 20px 0;
+   float: left;
+   height: 300px;
+   margin: 10px 0 0 60px;
+   padding-right: 60px;
 }
 
 .about-me p {
-    margin-left: 60px;
-    padding: 0 20px 20px 0;
-    color: rgba(255, 254, 189, .8);;
+    margin: 20px 20px 0 20px;
+    padding: 0 20px 20px 0px;
+    color: rgba(255, 254, 189, .8);
+    text-align: left;
+    float: top;
+    line-height: 1.5;
 }
 
+.portfolio {
+    background-color:var(--primary-color);
+    color: var(--secondary-color);
+    width: 100%;
+    height: 700px;
+    flex: auto;
+    flex-wrap: wrap;
+}
 
+.portfolio h2 {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-left: 60px;
+    padding-right: 50%;
+    color: rgba(255, 254, 189, .8);
+    font-weight: 100;
+}
+
+.runbg {
+    height: 300px;
+    margin-left: 60px;
+    padding-bottom: 20px;
+}
+
+.run1 {
+   height: 200px;
+   margin-left: 60px;
+  
+}
+
+.run2 {
+    height: 200px;
+
+}
+
+.run3 {
+    height: 200px;
+    
+}
+
+.portfolio p {
+    margin: 20px 20px 0 60px;
+    padding: 0 20px 20px 0px;
+    color: rgba(255, 254, 189, .8);
+    text-align: left;
+    float: top;
+    line-height: 1.5;
+}
+
+#container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-shrink: 2;
+    justify-content: space-around;
+    margin-left: -35px;
+}
