--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: #4f7c94;
     --secondary-color:rgb(255, 254, 189);
-    --tertiary-color: #e78484; 
+    --tertiary-color: #858585;
 }
 
 * {
@@ -22,9 +22,9 @@ body {
 
 .container h1 {
     float: left;
-    border: 2px solid #e78484;
+    border: 2px solid #858585a4;
     color: var(--secondary-color);
-    opacity: 0.7;
+    opacity: 0.4;
     margin:  10px 0 10px 0;
     padding: 2px 4px;
     font-weight: 100;
@@ -50,7 +50,7 @@ nav {
 }
 
 nav ul {
-    margin: o;
+    margin: 0;
     padding: 0;
     list-style: none;
 }
@@ -75,9 +75,9 @@ nav a::before {
     content: "";
     display: block;
     height: 2px;
-    margin-top: -23px;
+    margin-top: -22px;
     width: 0%;
-    background-color: var(--tertiary-color);
+    background: rgb(255, 254, 189);
     position: absolute;
 }
 
@@ -89,7 +89,7 @@ nav a:hover::before {
     text-align: center;
     padding-bottom: 100px;
     color: rgba(43, 113, 187, 0.5);
-    text-shadow: 2px 2px 2px rgba(231,132,132, 0.4);
+    text-shadow: 2px 2px 2px rgba(133, 133, 133, .6)
 }
 
 .hero {
@@ -208,7 +208,82 @@ nav a:hover::before {
 #container {
     display: flex;
     flex-wrap: wrap;
-    flex-shrink: 2;
     justify-content: space-around;
     margin-left: -35px;
 }
+
+.contact {
+    background-color: rgba(9, 124, 190, 0.849);
+    color: var(--secondary-color);
+    width: 100%;
+    height: 250px;
+    flex: auto;
+    flex-wrap: wrap;
+}
+
+.contact h2 {
+    padding-top: 20px;
+    padding-bottom: 10px;
+    color: rgba(255, 255, 255, 0.801);
+    border-top: 2px solid #4b4b4b;
+    font-weight: 100; 
+    text-align: center; 
+}
+
+.contact p {
+    margin: 20px 20px 0 60px;
+    padding: 0 20px 20px 0px;
+    color: rgba(245, 245, 245, 0.801);
+    text-align: left;
+    float: top;
+    line-height: 1.5;
+    text-align: center;
+}
+
+.contact address {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-left: 60px;
+    padding-right: 50%;
+    color: whitesmoke;
+    font-weight: 100; 
+}
+
+.mail {
+    margin: 20px 20px 0 60px;
+    padding: 0 20px 40px 0px;
+    color: whitesmoke;
+    text-align: left;
+    float: top;
+    line-height: 1.5;
+}
+
+@media screen and (max-width: 768px) {
+
+.runbg {
+    height: 225px;
+}    
+
+.run1 {
+    height: 150px;
+}
+
+.run2 {
+    height: 150px;
+}
+
+.run3 {
+    height: 150px;
+    margin-top: 20px;
+    margin-right: 314px;
+}
+
+.portfolio {
+   height: auto;
+}
+
+    
+@media screen and (max-width: 575px) {
+
+    width: 60%;
+}    
